create new house without associating user as a member of the house

--- a/client/views/show.jade
+++ b/client/views/show.jade
@@ -1,8 +1,30 @@
 extends layout
 
 block content
-  ul
-    for item in user
-      li= item
+  h3 Hello #{user.first_name}
+
+  if user.houses
+    ul
+      for house in user.houses
+        li
+          a(href="/houses/#{house.id}")= house
+  else
+    p You don't belong to any houses yet!
+
+  form(action='/houses' method='POST')
+    h3 Create a new house!
+    input(type="text" placeholder="House name" name="name")
+    input(type="password" placeholder="password" name="password")
+    input(type="password" placeholder="confirm password" name="password_confirmation")
+    input(type="submit" value="Create")
+
+  if messages.errors
+    ul
+      for errors in messages.errors
+        for error in errors
+          li= error
+
+  if messages.success
+    p= messages.success
 
   a(href="/users/logout") Logout
