--- a/client/views/login.jade
+++ b/client/views/login.jade
@@ -4,3 +4,7 @@ block content
   h1= title
   p Welcome to #{title}
   a(href="#{oauth_url}") Connect with Venmo!
+
+  if messages.venmo_error
+    p Opps! Looks like there was a problem with Venmo:
+    p= messages.venmo_error
