fix spelling error

--- a/client/views/login.jade
+++ b/client/views/login.jade
@@ -6,5 +6,5 @@ block content
   a(href="#{oauth_url}") Connect with Venmo!
 
   if messages.venmo_error
-    p Opps! Looks like there was a problem with Venmo:
+    p Oops! Looks like there was a problem with Venmo:
     p= messages.venmo_error
