--- a/client/views/index.jade
+++ b/client/views/index.jade
@@ -28,7 +28,7 @@ block content
           li= error
 
   if messages.venmo_error
-    p Opps! Looks like there was a problem with Venmo:
+    p Oops! Looks like there was a problem with Venmo:
     p= messages.venmo_error
 
   if messages.success
