--- a/client/views/house.jade
+++ b/client/views/house.jade
@@ -3,9 +3,9 @@ extends layout
 block content
   if house
     h1 Welcome to the #{house.name} house!
-    p #{users.length} roomies belong to this house
+    p #{house.users.length} roomies belong to this house
     ul
-      for user in users
+      for user in house.users
         li
           img(src="#{user.profile_picture_url}")
           p= user.first_name
