--- a/client/views/user.jade
+++ b/client/views/user.jade
@@ -6,7 +6,7 @@ block content
     h3= user.display_name
     h3 #{user.first_name}'s houses:
     ul
-      for house in houses
+      for house in user.houses
         li
           a(href="/houses/#{house.id}")
             p= house.name
