--- a/client/public/stylesheets/style.css
+++ b/client/public/stylesheets/style.css
@@ -6,3 +6,18 @@ a {
   color: #00B7FF;
 }
 
+.roomiesApp {
+  margin-top: 81px;
+}
+
+.large-padding {
+  padding: 30px 0 30px 0;
+}
+
+.medium-padding {
+  padding: 15px 0 15px 0;
+}
+
+.user-icon {
+  padding: 0!important;
+}
