add roomies icon

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -6,6 +6,8 @@
 
   <title>roomies</title>
 
+  <link rel="icon" type="image/png" href="images/roomies-logo.png">
+
   <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="libs/animate.css/animate.min.css">
   <link rel="stylesheet" href="stylesheets/style.css">
