show when the expense was added in days

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -12,16 +12,17 @@
   <link rel="stylesheet" href="libs/animate.css/animate.min.css">
   <link rel="stylesheet" href="stylesheets/style.css">
 
-  <script src="libs/jquery/dist/jquery.min.js"></script>
-  <script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="libs/underscore/underscore-min.js"></script>
-  <script src="libs/react/react-with-addons.js"></script>
-  <script src="libs/react/JSXTransformer.js"></script>
+  <script type="text/javascript" src="libs/jquery/dist/jquery.min.js"></script>
+  <script type="text/javascript" src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="libs/underscore/underscore-min.js"></script>
+  <script type="text/javascript" src="libs/react/react-with-addons.js"></script>
+  <script type="text/javascript" src="libs/react/JSXTransformer.js"></script>
 </head>
 <body>
 
   <div id="content"></div>
 
+  <script type="text/javascript" src="javascripts/dateify.js"></script>
   <script type="text/jsx" src="javascripts/main.js"></script>
 </body>
 </html>
