--- a/client/views/layout.jade
+++ b/client/views/layout.jade
@@ -4,5 +4,6 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel="icon" type="image/png" href="images/roomies-logo.png")
+    script(src="javascripts/dateify.js")
   body
     block content
