precompile react code

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -23,6 +23,6 @@
   <div id="content"></div>
 
   <script type="text/javascript" src="javascripts/dateify.js"></script>
-  <script type="text/jsx" src="javascripts/main.js"></script>
+  <script type="text/javascript" src="javascripts/main.js"></script>
 </body>
 </html>
