--- a/client/views/layout.jade
+++ b/client/views/layout.jade
@@ -1,9 +1,17 @@
 doctype html
 html
   head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    meta(charset="UTF-8")
+    meta(name="viewport" content="width=device-width, initial-scale=1")
+    title roomies
     link(rel="icon" type="image/png" href="images/roomies-logo.png")
-    script(src="javascripts/dateify.js")
+    link(rel="icon" type="image/png" href="images/roomies-logo.png")
+    link(rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css")
+    link(rel="stylesheet" href="libs/animate.css/animate.min.css")
+    link(rel='stylesheet' href='/stylesheets/style.css')
+    script(type="text/javascript" src="libs/jquery/dist/jquery.min.js")
+    script(type="text/javascript" src="libs/bootstrap/dist/js/bootstrap.min.js")
+    script(type="text/javascript" src="libs/underscore/underscore-min.js")
+    script(type="text/javascript" src="libs/react/react-with-addons.js")
   body
     block content
