make roomies logo responsive

--- a/client/views/splash.jade
+++ b/client/views/splash.jade
@@ -23,3 +23,11 @@ block content
         $(".venmo-img").attr("src", "images/venmo-logowhite.png")
       }
     );
+
+    $('#header').css('width', $(window).width());
+    $('#header').css('height', $(window).height());
+
+    $(window).resize(function() {
+      $('#header').css('width', $(window).width());
+      $('#header').css('height', $(window).height());
+    });
